--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.myspace</groupId>
-  <artifactId>ProjetdeTest</artifactId>
+  <groupId>com.total.anac</groupId>
+  <artifactId>ProjetDeTest</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
   <name>Projet de Test</name>
@@ -44,12 +44,6 @@
       <artifactId>kie-api</artifactId>
       <version>7.23.0.Final-redhat-00002</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.total.anac</groupId>
-      <artifactId>models</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
   <build>
